# seld_wav2vec2

./: README.md  dev-requirements.txt  dvc-requirements.txt  pyproject.toml  setup.py
conf/: config.yaml  config_ft_tau2019.yaml  config_ft_tau2020.yaml
conf/ft_dataset_tau2019/: tau_2019_ts47520_str10000.yaml
conf/pret_dataset/: raw_audio_l3das22.yaml
data/: .gitignore
data_processing/fine-tuning/: TAU_2019_preprocess_foa_xyz_cart_20msT.py  TAU_2019_preprocess_foa_xyz_cart_20msT_hdf.py  TAU_2020_preprocess_foa_xyz_cart_20msT.py  TAU_2020_preprocess_foa_xyz_cart_20msT_hdf.py  TAU_2020_preprocess_foa_xyz_cart_20msT_interp.py  TAU_2020_preprocess_foa_xyz_cart_20msT_interp_hdf.py  utils.py
data_processing/pretraining/: dump_features_spec.py  preprocess_20XX_stride.py  pretraining_preprocess_data2X.py
scripts/: evaluate_SELDmetrics_2019.py  evaluate_SELDmetrics_2019_optimal_thr.py  evaluate_SELDmetrics_2020.py  wav2vec_manifest.py
src/: cseld_ambisonics.c  cseld_ambisonics.pyx
src/seld_ambisonics/: binauralizer.py  common.py  decoder.py  distance.py  encoder.py  hrir.py  position.py  spherical_maps.py  tdesigns.py
src/seld_ambisonics/iolib/: audio.py  av_wrappers.py  position.py
src/seld_ambisonics/utils/: distributed.py  eval_utils.py  main_utils.py  nfov.py  scheduler.py  segm_eval_utils.py  video360.py
src/seld_data_processing/: save_waves.py
src/seld_wav2vec2/: utils.py
src/seld_wav2vec2/criterions/: __init__.py  cSELD_evaluation_metrics.pyx  ccls_feature_class.pyx  multi_label_regression.py  wav2vec_mlm_criterion.py
(+14 files in other folders)
