
[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy", "setuptools_scm"]

[project]
name = "seld_wav2vec2"
version = "1.1.0"
requires-python = "~=3.10.16"
dependencies = [
    "autopep8>=2.0.4",
    "pandas>=2.0.0",
    "soundfile>=0.12.1",
    "librosa>=0.9.2",
    "scikit-learn>=1.0.0",
    "matplotlib>=3.10.1",
    "pillow>=10.0.1",
    "spafe==0.3.2",
    "pyarrow>=13.0.0",
    "torch==2.5.1",
    "torchvision==0.20.1",
    "torchaudio==2.5.1",
    "mpire>=2.9.0",
    "cython>=3.0.11",
    "h5py>=3.11.0",
    "pytorch_tcn==1.0.0",
    "cachetools==5.5.2"
]
readme = "README.md"

[project.optional-dependencies]
dvc = ["dvclive==2.7.0", "dvc-gdrive==2.19.2"]
dev = [
    "filelock==3.12.0",
    "wandb>=0.17.7",
    "importlib-resources==5.12.0",
    "tensorboardX==2.6.0",
    "torch_audiomentations==0.12.0",
    "fairseq @ git+https://github.com/pytorch/fairseq.git@ecbf110e1eb43861214b05fa001eff584954f65a",
]